--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
         </div>
       </div>
       <!-- fine Portfolio -->
+
+      <!-- About -->
+      <div class="container" id="about">
+        <div class="row">
+          <h2 class="title">about</h2>
+          <i class="fa fa-star fa-3x" aria-hidden="true"></i>
+          <div class="col-xs-12">
+            <p>Freelancer is a free bootstrap theme created by start bootstrap. The download includes the complete source flies including HTML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization</p>
+          </div>
+          <div class="col-xs-12">
+            <p>Whether you're a student looking to showcase yourwork, a professional looking to attract clients or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+          </div>
+        </div>
+        <button type="button" class="btn btn-default">Download</button>
+      </div>
+      <!-- fine About -->
+
+      <!-- Contact -->
+      <div class="container" id="contact">
+        <h2 class="title">contact me</h2>
+        <i class="fa fa-star fa-3x" aria-hidden="true"></i>
+        <div class="row">
+          
+
+        </div>
+      </div>
     </div>
     <!-- fine Container di pagina -->
 
