Piccola pulizia di codice

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,15 +18,19 @@
       <!-- fine navbar -->
 
       <!-- Jumbotron -->
-      <div class="container" id="jumbotron">
+      <div class="container bck-green" id="jumbotron">
         <div class="row">
-          <div class="col-xs-6 col-xs-offset-3">
-            <img src="img/avataaars.svg" alt="">
+          <div class="col-xs-12">
+            <div class="avatar-container">
+              <img src="img/avataaars.svg" alt="">
+            </div>
             <h1 class="title">start bootstrap</h1>
-            <i class="fa fa-star fa-3x" aria-hidden="true"></i>
+            <div class="star-container star-white">
+              <i class="fa fa-star fa-3x star-white" aria-hidden="true"></i>
+            </div>
           </div>
           <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
+            <div class="col-xs-12">
               <h2 class="title">grapich artist - web designer - illustrator</h2>
             </div>
           </div>
@@ -37,29 +41,31 @@
       <!-- Portfolio -->
       <div class="container" id="portfolio">
         <div class="row">
-          <div class="col-xs-6 col-xs-offset-3">
+          <div class="col-xs-12">
             <h2 class="title">portfolio</h2>
-            <i class="fa fa-star fa-3x" aria-hidden="true"></i>
+            <div class="star-container star-dark">
+              <i class="fa fa-star fa-3x star-dark" aria-hidden="true"></i>
+            </div>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <img src="img/casa.png" alt="">
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <img src="img/torta.png" alt="">
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <img src="img/tenda.png" alt="">
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <img src="img/controller.png" alt="">
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <img src="img/cassaforte.png" alt="">
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <img src="img/sub.png" alt="">
           </div>
         </div>
@@ -67,27 +73,33 @@
       <!-- fine Portfolio -->
 
       <!-- About -->
-      <div class="container" id="about">
+      <div class="container bck-green" id="about">
         <div class="row">
           <h2 class="title">about</h2>
-          <i class="fa fa-star fa-3x" aria-hidden="true"></i>
-          <div class="col-xs-12">
+          <div class="star-container star-white">
+            <i class="fa fa-star fa-3x star-white" aria-hidden="true"></i>
+          </div>
+          <div class="col-xs-12 col-md-6">
             <p>Freelancer is a free bootstrap theme created by start bootstrap. The download includes the complete source flies including HTML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization</p>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
             <p>Whether you're a student looking to showcase yourwork, a professional looking to attract clients or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
           </div>
         </div>
-        <button type="button" class="btn btn-default">Download</button>
+        <div class="button-container">
+          <button type="button" class="btn btn-default">Download</button>
+        </div>
       </div>
       <!-- fine About -->
 
       <!-- Contact -->
       <div class="container" id="contact">
         <h2 class="title">contact me</h2>
-        <i class="fa fa-star fa-3x" aria-hidden="true"></i>
+        <div class="star-container star-dark">
+          <i class="fa fa-star fa-3x star-dark" aria-hidden="true"></i>
+        </div>
         <div class="row">
-          
+
 
         </div>
       </div>
