--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <h2 class="title text-white">grapich artist - web designer - illustrator</h2>
+              <h3 class="title text-white">grapich artist - web designer - illustrator</h3>
             </div>
           </div>
         </div>
@@ -69,22 +69,22 @@
         </div>
 
         <div class="row">
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <img src="img/casa.png" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <img src="img/torta.png" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <img src="img/tenda.png" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <img src="img/controller.png" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <img src="img/cassaforte.png" alt="">
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-12 col-md-6 col-lg-4">
             <img src="img/sub.png" alt="">
           </div>
         </div>
@@ -140,7 +140,36 @@
       </div>
 
       <div class="container" id="footer">
+        <div class="row">
+          <div class="col-xs-12 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+            <h3 class="text-uppercase text-white">location</h3>
+            <h4 class="text-white">2215 John Daniel Drive Clark, MO 54243</h4>
 
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-4 icon-container">
+            <h3 class="text-uppercase text-white">around the web</h3>
+            <div class="icon">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </div>
+            <div class="icon">
+              <i class="fa fa-google-plus" aria-hidden="true"></i>
+            </div>
+            <div class="icon">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="icon">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </div>
+
+          </div>
+          <div class="col-xs-12 col-md-3 col-lg-3">
+            <h3 class="text-uppercase text-white">about freelancer</h3>
+            <p class="text-white">Freelanceris a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="end-footer">
+        <p class="text-white">Copyright	&copy; Your Website 2020</p>
       </div>
     </div>
     <!-- fine Container di pagina -->
